# PowellsAndHewtonsOptimizationMethods

./: CMakeLists.txt  Check.xmcd  Optimization.cpp  Optimization.h  main.cpp  point.cpp  point.h
src/: CMakeLists.txt
src/PowellsMethod/: CMakeLists.txt
src/PowellsMethod.Math/: CMakeLists.txt
src/PowellsMethod.Math/include/PowellsMethod.Math/: Optimization.h  point.h
src/PowellsMethod.Math/src/: Optimization.cpp  point.cpp
src/PowellsMethod.Math/tests/: CMakeLists.txt  OptimiationTests.cpp  PointTests.cpp
src/PowellsMethod/src/: main.cpp
